--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
     <button id="raise-button">レイズ</button>
     <button id="fold-button">フォールド</button>
         <div id="pot">Pot: $0</div>
-        <div id="message"></div>
+    <div id="message"></div>
+    <button id="retry-button" style="display:none; margin-top:16px;">もう一度プレイ</button>
     </div>
     <script src="js/deck.js"></script>
     <script src="js/game.js"></script>
