--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
                 </div>
                 <div id="ai-container">
                     <h2>AI プレイヤー</h2>
-                    <!-- AI プレイヤーのブロックは JavaScript でここに動的に追加されます -->
+                    <!-- 単一AI表示用要素（既存 ui.js と互換） -->
+                    <div id="ai-hand" class="ai-hand"></div>
+                    <div id="ai-chips" class="chips">Chips: $1000</div>
                 </div>
             </div>
         </div>
