--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <button id="start-game-button" class="title-btn primary">ゲーム開始</button>
             <details class="howto">
                 <summary>遊び方</summary>
-                <ul>
-                    <li>カードは裏で配られてから順にめくられます。</li>
-                    <li>ショウダウン中はコール/レイズ/フォールドはできません。</li>
-                    <li>次のラウンドは「次のラウンドへ移行」から。</li>
-                </ul>
+                <div id="howto-content"></div>
+                <div style="margin-top:8px">
+                    <button id="howto-open" class="title-btn">全画面で見る</button>
+                </div>
             </details>
         </div>
     </div>
@@ -36,6 +35,7 @@
         <h1 id="game-mode-title">テキサスポーカー</h1>
         <div id="table-layout">
             <div id="dealer-anchor" aria-hidden="true"></div>
+            <div id="pot">Pot: $0</div>
             <div id="community-cards">
                 <h2>コミュニティカード</h2>
                 <div id="community-hand"></div>
@@ -60,8 +60,13 @@
         <input type="number" id="raise-amount" min="1" value="50" style="width:80px;">
         <button id="raise-button">レイズ</button>
         <button id="fold-button">フォールド</button>
-        <button id="hand-chart-button" style="margin-left:8px;">役表</button>
-        <div id="pot">Pot: $0</div>
+        <!-- Draw mode specific controls (shown only in Draw) -->
+        <span id="draw-controls" style="display:none; margin-left:8px;">
+            <input id="draw-input" type="text" placeholder="交換: 0,2,4" title="0-4の位置でカンマ区切り (1-5も可)" style="width:120px;" />
+            <button id="draw-button" title="選んだカードを交換">ドロー</button>
+            <button id="stand-button" title="交換しないで確定">スタンド</button>
+        </span>
+    <button id="hand-chart-button" style="margin-left:8px;">役表</button>
         <div id="message"></div>
         <button id="retry-button" style="display:none; margin-top:16px;">もう一度プレイ</button>
         <button id="next-round-button" style="display:none; margin-top:12px;">次のラウンドへ移行</button>
@@ -76,6 +81,18 @@
     <script src="src/js/main.js"></script>
 
     <!-- Hand ranking modal -->
+    <!-- Floating layer for coin animations -->
+    <div id="coin-layer" aria-hidden="true"></div>
+    <!-- HowTo modal (same style as hand chart) -->
+    <div id="howto-overlay" aria-hidden="true">
+        <div id="howto-modal">
+            <div class="hc-header">
+                <h3>遊び方</h3>
+                <button id="howto-close" aria-label="閉じる">×</button>
+            </div>
+            <div class="hc-body" id="howto-modal-body"></div>
+        </div>
+    </div>
     <div id="hand-chart-overlay" aria-hidden="true">
         <div id="hand-chart">
             <div class="hc-header">
