--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     <script src="src/js/ai.js"></script>
     <script src="src/js/draw-game.js"></script>
     <script src="src/js/ui.js"></script>
+    <script src="src/js/controllers/texas-controller.js"></script>
+    <script src="src/js/controllers/draw-controller.js"></script>
     <script src="src/js/main.js"></script>
 
     <!-- Hand ranking modal -->
