--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                     <h2>プレイヤーの手札</h2>
                     <div id="player-hand"></div>
                     <div id="player-hand-name" class="hand-name"></div>
-                    <div id="player-chips" class="chips">Chips: $1000</div>
                 </div>
                 <div id="ai-container">
                     <h2>AI プレイヤー</h2>
@@ -55,19 +54,28 @@
                 </div>
             </div>
         </div>
-        <!-- <button id="deal-button">カードを配る</button> -->
+    <!-- プレイヤー所持金（ベットUIの上部へ移動） -->
+    <div id="player-chips" class="chips" style="margin-bottom:8px;">Chips: $1000</div>
+    <!-- <button id="deal-button">カードを配る</button> -->
         <button id="call-button">コール</button>
         <input type="number" id="raise-amount" min="1" value="50" style="width:80px;">
         <button id="raise-button">レイズ</button>
         <button id="fold-button">フォールド</button>
         <!-- Draw mode specific controls (shown only in Draw) -->
         <span id="draw-controls" style="display:none; margin-left:8px;">
+            <!-- ドロー（インフィニティ）モード専用の賭け金入力 -->
+            <input id="draw-bet-amount" type="number" min="0" step="10" value="50" title="アンティ（初期掛け金）" style="width:100px;" />
+            <button id="draw-bet-button" title="アンティを確定">ベット額確定</button>
+            <!-- 入金（3ラウンドごと） -->
+            <input id="draw-deposit-amount" type="number" min="0" step="100" value="500" title="入金額（3ラウンドごと）" style="width:100px; margin-left:6px;" />
+            <button id="draw-deposit-button" title="3ラウンドごとに入金">入金</button>
             <input id="draw-input" type="text" placeholder="交換: 0,2,4" title="0-4の位置でカンマ区切り (1-5も可)" style="width:120px;" />
             <button id="draw-button" title="選んだカードを交換">ドロー</button>
             <button id="stand-button" title="交換しないで確定">スタンド</button>
         </span>
     <button id="hand-chart-button" style="margin-left:8px;">役表</button>
         <div id="message"></div>
+    <div id="deposit-status" aria-live="polite"></div>
         <button id="retry-button" style="display:none; margin-top:16px;">もう一度プレイ</button>
         <button id="next-round-button" style="display:none; margin-top:12px;">次のラウンドへ移行</button>
     </div>
@@ -106,47 +114,72 @@
                     <tr>
                         <th>役名</th>
                         <th>説明</th>
+                        <th>倍率</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>ストレートフラッシュ</td>
                         <td>同一スートで連続した5枚</td>
+                        <td>12×</td>
                     </tr>
                     <tr>
                         <td>フォーカード</td>
                         <td>同ランク4枚</td>
+                        <td>8×</td>
                     </tr>
                     <tr>
                         <td>フルハウス</td>
                         <td>スリーカード＋ワンペア</td>
+                        <td>6×</td>
                     </tr>
                     <tr>
                         <td>フラッシュ</td>
                         <td>同一スート5枚</td>
+                        <td>5×</td>
                     </tr>
                     <tr>
                         <td>ストレート</td>
                         <td>連続した5枚（スート無関係）</td>
+                        <td>4×</td>
                     </tr>
                     <tr>
                         <td>スリーカード</td>
                         <td>同ランク3枚</td>
+                        <td>3×</td>
                     </tr>
                     <tr>
                         <td>ツーペア</td>
                         <td>異なるペア2組</td>
+                        <td>2×</td>
                     </tr>
                     <tr>
                         <td>ワンペア</td>
                         <td>同ランク2枚</td>
+                        <td>1.5×</td>
                     </tr>
                     <tr>
                         <td>ハイカード</td>
                         <td>役なし。最も高いカードで比較</td>
+                        <td>1×</td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <!-- Game Over modal -->
+    <div id="gameover-overlay" aria-hidden="true">
+        <div id="gameover-modal">
+            <div class="hc-header">
+                <h3>ゲームオーバー</h3>
+                <button id="gameover-close" aria-label="閉じる">×</button>
+            </div>
+            <div class="hc-body">
+                <p id="gameover-reason">入金が行われなかったため、ゲームオーバーです。</p>
+                <div style="margin-top:12px;">
+                    <button id="gameover-retry" class="title-btn primary">もう一度プレイ</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
